# yandex-cloud-api-rs

./: Cargo.toml
codegen/: Cargo.toml
codegen-core/: Cargo.toml
codegen-core/src/: lib.rs
codegen/src/: catalog.rs  main.rs  service.rs  tests.rs
compute-v1/: Cargo.toml
compute-v1/src/: gen.rs  generated_client.rs  lib.rs  pb.rs
core/: Cargo.toml
core/src/: auth.rs  lib.rs  svc.rs  util.rs
kms-v1/: Cargo.toml
kms-v1/src/: gen.rs  generated_client.rs  lib.rs  pb.rs
providers/: Cargo.toml
providers/src/: auth_key.rs  cli.rs  imds.rs  lib.rs
providers/src/auth_key/: loader.rs
ydb-v1/: Cargo.toml
ydb-v1/src/: generated_client.rs  lib.rs  pb.rs
