[package]
name = "yandex-cloud-api-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.6"
tokio = "1.17.0"
tonic = "0.7.1"
tower = "0.4.12"
#jsonwebtoken = "8.0.1"
#reqwest = { version = "0.11.10", features = ["json"] }
#serde = { version = "1.0.136", default-features = false }
#serde_derive = "1.0.136"
#serde_json = "1.0.79"
#thiserror = "1.0.30"
